--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brave Stats</title>
+    <title>Brave Stats Manipulator</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="icon"
+      href="https://brave.com/static-assets/images/brave-favicon.png"
+    />
   </head>
   <body>
-    <p id="requests">0</p>
-    <button class="btn" onclick="activate()">Start</button>
+    <p id="requests" title="requests">0</p>
+    <button class="btn" onclick="activate()">Run</button>
     <p class="warning">Will crash ur browser after a while</p>
 
     <script src="./js/script.js"></script>
