--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brave Stats Manipulator</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="icon"
-      href="https://brave.com/static-assets/images/brave-favicon.png"
-    />
+    <link rel="icon" href="https://brave.com/static-assets/images/brave-favicon.png" />
   </head>
   <body>
     <p id="requests" title="requests">0</p>
     <button class="btn" onclick="activate()">Run</button>
-    <p class="warning">Will crash ur browser after a while</p>
+    <p class="warning">Will crash after some time (You can click as many times as you want)</p>
 
     <script src="./js/script.js"></script>
   </body>
